--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: go
 go:
 - '1.9.1'
 - master
+matrix:
+  allow_failures:
+    - go: master
 script: make test
 env:
   # GITHUB_TOKEN: tisba/"stormforger/cli goreleaser"
