--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,6 +19,10 @@
 #  name = "github.com/x/y"
 #  version = "2.4.0"
 
+[prune]
+  non-go = true
+  unused-packages = true
+  go-tests = true
 
 [[constraint]]
   name = "github.com/dustin/go-humanize"
