--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -43,3 +43,7 @@
 
 [[constraint]]
   name = "github.com/spf13/viper"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/mitchellh/go-homedir"
