--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -51,3 +51,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/mitchellh/go-homedir"
+
+[[override]]
+  branch = "master"
+  name = "github.com/spf13/pflag"
