--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,16 +10,28 @@ jobs:
     runs-on: ubuntu-latest
     name: goreleaser
     steps:
-    - name: Set up Go 1.15
+    - name: Check out code
+      uses: actions/checkout@v2.3.4
+
+    - name: Read Go version
+      id: read_versions
+      run: |
+        echo "::set-output name=go::$(go mod edit -json | jq -r .Go)"
+
+    - name: Set up Go
       uses: actions/setup-go@v2.1.3
       with:
-        go-version: 1.15
+        go-version: "${{ steps.read_versions.outputs.go }}"
       id: go
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2.3.4
+    - uses: actions/cache@v2.1.4
       with:
-        fetch-depth: 0
+        path: |
+          ~/go/pkg/mod
+          ~/.cache/go-build
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
 
     - name: 'Wait for status checks'
       uses: jitterbit/await-check-suites@v1
