--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,16 +22,11 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Read Go version
-      id: read_versions
-      run: |
-        echo "::set-output name=go::$(go mod edit -json | jq -r .Go)"
-
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: "${{ steps.read_versions.outputs.go }}"
-      id: go
+        go-version-file: "go.mod"
+        cache: true
 
     - uses: actions/cache@v3
       with:
