Remove Public Key Pinning & Update Go (#382)
* removes public key pinning

* bumps Go version to 1.20

* result of go mod tidy

* applies go fmt changes

* updates Go GHA workflows

* Revert "result of go mod tidy"

This reverts commit 0a65005661a39b63aa75af5bc5b98aae8598cdba.

* go mod tidy

* GHA: with actions/setup-go@v4 cache defaults to true

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,16 +22,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Read Go version
-      id: read_versions
-      run: |
-        echo "::set-output name=go::$(go mod edit -json | jq -r .Go)"
-
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: "${{ steps.read_versions.outputs.go }}"
-      id: go
+        go-version-file: "go.mod"
 
     - uses: actions/cache@v3
       with:
