--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -4,7 +4,7 @@ jobs:
 
   build:
     name: Build
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-20.04"
     steps:
     - name: Check out code
       uses: actions/checkout@v3
@@ -28,7 +28,7 @@ jobs:
 
   gofmt:
     name: Run gofmt
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-20.04"
     steps:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v3
