--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
       - "v*.*.*"
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-20.04"
     name: goreleaser
     steps:
     - name: 'Wait for status checks'
