--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,17 +6,15 @@ on:
     tags:
       - "v*.*.*"
 jobs:
+  buildandtest:
+    uses: ./.github/workflows/go.yml
+    secrets: inherit
+
   build:
     runs-on: "ubuntu-20.04"
     name: goreleaser
+    needs: buildandtest
     steps:
-      - name: "Wait for status checks"
-        uses: jitterbit/await-check-suites@292a541bb7618078395b2ce711a0d89cfb8a568a # v1
-        with:
-          token: "${{ secrets.GITHUB_TOKEN }}"
-          timeoutSeconds: 600
-          appSlugFilter: "github-actions"
-
       - name: Check out code
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
