--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,8 @@
 name: Go
-on: [push]
+on:
+  push:
+  # Also allow this workflow to be callable.
+  workflow_call:
 jobs:
   build:
     name: Build
