--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -6,7 +6,8 @@ on:
 jobs:
   build:
     name: Build
-    runs-on: "ubuntu-22.04"
+    # stick with Ubuntu 20.04 LTS for older glibc compatibility
+    runs-on: "ubuntu-20.04"
     steps:
     - name: Check out code
       uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
