--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,8 @@ jobs:
     secrets: inherit
 
   build:
-    runs-on: "ubuntu-22.04"
+    # stick with Ubuntu 20.04 LTS for older glibc compatibility
+    runs-on: "ubuntu-20.04"
     name: goreleaser
     needs: buildandtest
     steps:
